// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-button.vue Demo-主要按钮 1`] = `
<div>
  <a class="root" color="primary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    确 定</a>
</div>
`;

exports[`u-button.vue Demo-加载中 1`] = `
<div class="root" direction="horizontal" gap="small" type vusion-slot-name="default">
  <a class="root" color="primary" hovertype="underline" loading tabindex="0" target="_self" vusion-slot-name-edit="text">
    创建实例</a>
  <a class="root" color="primary" disabled="disabled" hovertype="underline" loading tabindex="-1" target="_self" vusion-slot-name-edit="text">
    <span class="lcp-iconv">
      <span class="iconwrap">
        <svg aria-hidden="true" class="iconsvg">
          <use xlink:href="#pc-add" />
        </svg>
      </span>
      <div class="icontext" vusion-slot-name="default">
      </div>
    </span> 创建实例
  </a>
  <a class="root" color="primary" hovertype="underline" shape="square" tabindex="0" target="_self" vusion-slot-name-edit="text">
    <span class="lcp-iconv">
      <span class="iconwrap">
        <svg aria-hidden="true" class="iconsvg">
          <use xlink:href="#pc-refresh" />
        </svg>
      </span>
      <div class="icontext" vusion-slot-name="default">
      </div>
    </span>
  </a>
</div>
`;

exports[`u-button.vue Demo-图标 1`] = `
<div>
  <div class="root" direction="horizontal" gap="small" type vusion-slot-name="default">
    <a class="root" color="primary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      <span class="lcp-iconv">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-add" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span> 确定
    </a>
    <a class="root" color="primary" disabled="disabled" hovertype="underline" tabindex="-1" target="_self" vusion-slot-name-edit="text">
      <span class="lcp-iconv">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-add" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span> 创建实例
    </a>
    <a class="root" color="primary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      <span class="lcp-iconv">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-success" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span> 创建成功
    </a>
    <a class="root" hovertype="underline" shape="square" tabindex="0" target="_self" vusion-slot-name-edit="text">
      <span class="lcp-iconv">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-refresh" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </a>
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      <span class="lcp-iconv">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-home" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span> 首页
    </a>
  </div>
</div>
`;

exports[`u-button.vue Demo-图标按钮 1`] = `
<div>
  <a class="root" color="primary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    <span class="lcp-iconv">
      <span class="iconwrap">
        <svg aria-hidden="true" class="iconsvg">
          <use xlink:href="#pc-add" />
        </svg>
      </span>
      <div class="icontext" vusion-slot-name="default">
      </div>
    </span> 创 建
  </a>
</div>
`;

exports[`u-button.vue Demo-块级展示 1`] = `
<div>
  <div class="root" direction="vertical" gap="small" type vusion-slot-name="default">
    <a class="root" display="block" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Default</a>
    <a class="root" color="primary" display="block" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Primary</a>
    <a class="root" dashed display="block" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Dashed</a>
    <a class="root" color="danger" display="block" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Danger</a>
  </div>
</div>
`;

exports[`u-button.vue Demo-基本用法 1`] = `
<div>
  <div class="root" direction="horizontal" gap="small" type vusion-slot-name="default">
    <a class="root" color="primary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Primary</a>
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Default</a>
    <a class="root" dashed hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Dashed</a>
    <a class="root" color="danger" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Danger</a>
  </div>
</div>
`;

exports[`u-button.vue Demo-按钮自动加载 1`] = `
<a class="root" color="primary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
  链接</a>
`;

exports[`u-button.vue Demo-普通按钮 1`] = `
<div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    确 定</a>
</div>
`;

exports[`u-button.vue Demo-次要按钮 1`] = `
<div>
  <a class="root" color="primary_secondary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    确 定</a>
</div>
`;

exports[`u-button.vue Demo-禁用状态 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <a class="root" color="primary" disabled="disabled" hovertype="underline" tabindex="-1" target="_self" vusion-slot-name-edit="text">
      Primary</a>
    <a class="root" disabled="disabled" hovertype="underline" tabindex="-1" target="_self" vusion-slot-name-edit="text">
      Default</a>
    <a class="root" dashed disabled="disabled" hovertype="underline" tabindex="-1" target="_self" vusion-slot-name-edit="text">
      Dashed</a>
    <a class="root" color="danger" disabled="disabled" hovertype="underline" tabindex="-1" target="_self" vusion-slot-name-edit="text">
      Danger</a>
  </div>
</div>
`;

exports[`u-button.vue Demo-设置尺寸 1`] = `
<div>
  <div class="root" direction="vertical" type vusion-slot-name="default">
    <div class="root" direction="horizontal" gap="small" type vusion-slot-name="default">
      <a class="root" color="primary" hovertype="underline" size="mini" tabindex="0" target="_self" vusion-slot-name-edit="text">
        Primary</a>
      <a class="root" color="primary" hovertype="underline" shape="round" size="mini" tabindex="0" target="_self" vusion-slot-name-edit="text">
        Round</a>
      <a class="root" hovertype="underline" shape="square" size="mini" tabindex="0" target="_self" vusion-slot-name-edit="text">
        <span class="lcp-iconv">
          <span class="iconwrap">
            <svg aria-hidden="true" class="iconsvg">
              <use xlink:href="#pc-refresh" />
            </svg>
          </span>
          <div class="icontext" vusion-slot-name="default">
          </div>
        </span>
      </a>
      <a class="root" hovertype="underline" shape="circle" size="mini" tabindex="0" target="_self" vusion-slot-name-edit="text">
        <span class="lcp-iconv">
          <span class="iconwrap">
            <svg aria-hidden="true" class="iconsvg">
              <use xlink:href="#pc-refresh" />
            </svg>
          </span>
          <div class="icontext" vusion-slot-name="default">
          </div>
        </span>
      </a>
    </div>
    <div class="root" direction="horizontal" gap="small" type vusion-slot-name="default">
      <a class="root" color="primary" hovertype="underline" size="small" tabindex="0" target="_self" vusion-slot-name-edit="text">
        Primary</a>
      <a class="root" color="primary" hovertype="underline" shape="round" size="small" tabindex="0" target="_self" vusion-slot-name-edit="text">
        Round</a>
      <a class="root" hovertype="underline" shape="square" size="small" tabindex="0" target="_self" vusion-slot-name-edit="text">
        <span class="lcp-iconv">
          <span class="iconwrap">
            <svg aria-hidden="true" class="iconsvg">
              <use xlink:href="#pc-refresh" />
            </svg>
          </span>
          <div class="icontext" vusion-slot-name="default">
          </div>
        </span>
      </a>
      <a class="root" hovertype="underline" shape="circle" size="small" tabindex="0" target="_self" vusion-slot-name-edit="text">
        <span class="lcp-iconv">
          <span class="iconwrap">
            <svg aria-hidden="true" class="iconsvg">
              <use xlink:href="#pc-refresh" />
            </svg>
          </span>
          <div class="icontext" vusion-slot-name="default">
          </div>
        </span>
      </a>
    </div>
    <div class="root" direction="horizontal" gap="small" type vusion-slot-name="default">
      <a class="root" color="primary" hovertype="underline" size="normal" tabindex="0" target="_self" vusion-slot-name-edit="text">
        Primary</a>
      <a class="root" color="primary" hovertype="underline" shape="round" size="normal" tabindex="0" target="_self" vusion-slot-name-edit="text">
        Round</a>
      <a class="root" hovertype="underline" shape="square" size="normal" tabindex="0" target="_self" vusion-slot-name-edit="text">
        <span class="lcp-iconv">
          <span class="iconwrap">
            <svg aria-hidden="true" class="iconsvg">
              <use xlink:href="#pc-refresh" />
            </svg>
          </span>
          <div class="icontext" vusion-slot-name="default">
          </div>
        </span>
      </a>
      <a class="root" hovertype="underline" shape="circle" size="normal" tabindex="0" target="_self" vusion-slot-name-edit="text">
        <span class="lcp-iconv">
          <span class="iconwrap">
            <svg aria-hidden="true" class="iconsvg">
              <use xlink:href="#pc-refresh" />
            </svg>
          </span>
          <div class="icontext" vusion-slot-name="default">
          </div>
        </span>
      </a>
    </div>
    <div class="root" direction="horizontal" gap="small" type vusion-slot-name="default">
      <a class="root" color="primary" hovertype="underline" size="large" tabindex="0" target="_self" vusion-slot-name-edit="text">
        Primary</a>
      <a class="root" color="primary" hovertype="underline" shape="round" size="large" tabindex="0" target="_self" vusion-slot-name-edit="text">
        Round</a>
      <a class="root" hovertype="underline" shape="square" size="large" tabindex="0" target="_self" vusion-slot-name-edit="text">
        <span class="lcp-iconv">
          <span class="iconwrap">
            <svg aria-hidden="true" class="iconsvg">
              <use xlink:href="#pc-refresh" />
            </svg>
          </span>
          <div class="icontext" vusion-slot-name="default">
          </div>
        </span>
      </a>
      <a class="root" hovertype="underline" shape="circle" size="large" tabindex="0" target="_self" vusion-slot-name-edit="text">
        <span class="lcp-iconv">
          <span class="iconwrap">
            <svg aria-hidden="true" class="iconsvg">
              <use xlink:href="#pc-refresh" />
            </svg>
          </span>
          <div class="icontext" vusion-slot-name="default">
          </div>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`u-button.vue Demo-设置形状 1`] = `
<div>
  <div class="root" direction="horizontal" gap="small" type vusion-slot-name="default">
    <a class="root" color="primary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Primary</a>
    <a class="root" color="primary" hovertype="underline" shape="round" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Round</a>
    <a class="root" color="primary" hovertype="underline" shape="square" tabindex="0" target="_self" vusion-slot-name-edit="text">
      <span class="lcp-iconv">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-refresh" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </a>
    <a class="root" color="primary" hovertype="underline" shape="circle" tabindex="0" target="_self" vusion-slot-name-edit="text">
      <span class="lcp-iconv">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-refresh" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </a>
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Default</a>
    <a class="root" hovertype="underline" shape="round" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Round</a>
    <a class="root" hovertype="underline" shape="square" tabindex="0" target="_self" vusion-slot-name-edit="text">
      <span class="lcp-iconv">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-refresh" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </a>
    <a class="root" hovertype="underline" shape="circle" tabindex="0" target="_self" vusion-slot-name-edit="text">
      <span class="lcp-iconv">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-refresh" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </a>
  </div>
</div>
`;

exports[`u-button.vue Demo-链接 1`] = `
<div>
  <div class="root" direction="horizontal" gap="small" type vusion-slot-name="default">
    <a class="root" color="primary" hovertype="underline" href="https://vusion.github.io" tabindex="0" target="_blank" vusion-slot-name-edit="text">
      打开新窗口</a>
    <a class="root" hovertype="underline" href="#/cloud-ui/components/u-link" tabindex="0" target="_self" vusion-slot-name-edit="text">
      路由跳转</a>
    <a class="root" color="primary" disabled="disabled" hovertype="underline" href="https://vusion.github.io" tabindex="-1" target="_self" vusion-slot-name-edit="text">
      禁用链接</a>
  </div>
</div>
`;
